@@ -28,7 +28,7 @@ $multi_values .= '<a href="' . $checkall_url . '&amp;selectall=1" onclick="setSe
         /
         <a href="' . $checkall_url . '" onclick="setSelectOptions(\'dump\', \'db_select[]\', false); return false;">' . $strUnselectAll . '</a><br />';
 
-$multi_values .= '<select name="db_select[]" size="6" multiple="multiple">';
+$multi_values .= '<select name="db_select[]" size="10" multiple="multiple">';
 $multi_values .= "\n";
 
 foreach ($GLOBALS['pma']->databases as $current_db) {
